tests/errors/syntax_err01.v
module a;
integer [31:0]w;
endmodule

